--- a/about.html
+++ b/about.html
@@ -6,12 +6,9 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+:一个老男孩在网络的一篇寂静之地
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+嘿，很高兴认识你，无聊的中年欧巴分享日常跑步、羽毛球、破解软件的琐碎之地
 </p>
